--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>task_8</artifactId>
+    <artifactId>task_8_DZ_First</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -62,7 +62,7 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>100%</minimum>
+                                            <minimum>20%</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
